--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,6 @@
 // - imports
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+@import './mixins.scss';
 
 // - variable [8-pointGrid]
 $nMargin: 8px;
@@ -6,48 +8,199 @@ $nPadding: 8px;
 $nRadius: 8px;
 
 $vColor-One: royalblue;
-$vColor-Two: #6082B6;
+$vColor-Two: #6082b6;
+$vColor-Three: #ffaa33;
 $vDark: #28282b;
-$vWhite: #FAF9F6;
+$vWhite: #faf9f6;
+$vWhite-off: #e5e4e2;
+$vFont-Color: #343434;
 
 // - stylization
-*{// Generalizações
-   box-sizing: border-box;
+* {
+	// Generalizações
+	box-sizing: border-box;
+	font-family: 'Jost', sans-serif;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
+
+	button {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 }
 
-body{
-   height: 99vh;
-   padding: 0;
-   margin: 0;
-   display: grid;
-   place-items: center;
-   background-color: $vDark;
+body {
+	height: 99vh;
+	padding: 0;
+	margin: 0;
+	display: grid;
+	place-items: center;
+	background-color: $vDark;
+	grid-template-areas: 'H';
 }
 
-box{
-   width: 1080px;
-   height: 640px;
-   border-radius: $nRadius*5;
-   background-color: $vWhite;
-   display: grid;
-   grid-template-columns: 0.8fr 1.6fr;
-   gap: 8px;
-   grid-template-areas: "M B";
-   padding: $nPadding*2;
-   box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+box {
+	z-index: 3;
+	grid-area: H;
+	width: 1080px;
+	height: 640px;
+	border-radius: $nRadius * 5;
+	background-color: $vWhite;
+	display: grid;
+	grid-template-columns: 0.8fr 1.6fr;
+	gap: 8px;
+	grid-template-areas: 'M B';
+	padding: $nPadding * 2;
+	box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+		rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+		rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 
-   main{
-      grid-area: M;
-   }
-   .overBanner{
-      z-index: 3;
-      grid-area: B;
-      border-radius: $nRadius*3;
-   }
-   .banner{
-      border-radius: $nRadius*3;
-      background-color: $vDark;
-      grid-area: B;
-   }
+	main {
+		padding: $nPadding * 2 $nPadding;
+		grid-area: M;
+		display: grid;
+		align-items: center;
+
+		.titleMain {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			h3 {
+				margin: 0;
+				font-weight: 640;
+				@include font-grad($vColor-One, $vColor-Three);
+			}
+			p {
+				margin: 0;
+				font-weight: 640;
+				font-size: 32px;
+				color: $vFont-Color;
+			}
+		}
+		.extra {
+			margin-top: $nMargin;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			div {
+				height: 40px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				gap: 8px;
+				padding: $nPadding;
+				border-radius: 4px;
+				justify-self: center;
+				background-color: $vWhite-off;
+			}
+			button {
+				width: 40px;
+				height: 32px;
+				border-radius: 4px;
+				border: none;
+				font-size: 16px;
+				color: $vFont-Color;
+				transition: 0.2s;
+				cursor: pointer;
+				background-color: transparent;
+
+				&:hover {
+					background-color: $vWhite;
+				}
+			}
+			span {
+				margin-top: $nMargin * 2;
+				font-weight: 600;
+			}
+		}
+		.inputField {
+			margin-top: $nMargin;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			gap: 8px;
+
+			input[type='text'],
+			input[type='password'] {
+				width: 296px;
+				height: 40px;
+				padding: $nPadding;
+				border-radius: $nRadius;
+				border: solid 2px transparent;
+				background-color: $vWhite-off;
+				outline: none;
+				transition: 0.2s;
+				font-weight: 600;
+				&:focus {
+					transition: 0.3s;
+					border: 2px solid $vColor-Three;
+				}
+			}
+		}
+		button.continue {
+			height: 40px;
+			width: 80%;
+			justify-self: center;
+			align-self: center;
+
+			border-radius: $nRadius;
+			border: none;
+			background-color: $vColor-Three;
+			font-size: 16px;
+			color: white;
+			font-weight: 560;
+			cursor: pointer;
+		}
+		.adviceLogin {
+			align-self: center;
+			justify-self: center;
+
+			a {
+				font-weight: 600;
+			}
+		}
+	}
+	.overBanner {
+      background-color: rgba(0, 0, 0, 0.363);
+      padding: $nPadding*3;
+		z-index: 3;
+		grid-area: B;
+		border-radius: $nRadius * 3;
+		display: flex;
+      flex-direction: column;
+		align-items: center;
+		justify-content: space-between;
+      color: $vWhite;
+
+		h1 {
+		
+			font-weight: 640;
+			font-size: 120px;
+		}
+	}
+	.banner {
+		overflow: hidden;
+		border-radius: $nRadius * 3;
+		background-color: $vDark;
+		grid-area: B;
+
+		img {
+			height: 100%;
+			width: 100%;
+			object-fit: cover;
+		}
+	}
 }
 
+.background {
+	grid-area: H;
+	height: 100%;
+	width: 100%;
+	background-color: #6082b6;
+	background-image: url('wallpapersden.com_ai-magical-sunset-orange-x-blue_1952x1120.jpg');
+	background-size: cover;
+	filter: blur(2px);
+}
